# ChangeLog for dev-ruby/tzinfo
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/tzinfo/ChangeLog,v 1.34 2009/05/19 21:05:02 ranger Exp $

  19 May 2009; Brent Baude <ranger@gentoo.org> tzinfo-0.3.13.ebuild:
  keyworded ~arch for ppc64, bug 270420

  04 May 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  tzinfo-0.3.13.ebuild:
  Fix src_test when Ruby 1.9 is not present.

  20 Apr 2009; Markus Meier <maekke@gentoo.org> tzinfo-0.3.12-r1:
  x86 stable, bug #266520

  20 Apr 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  files/tzinfo.gemspec:
  Fix fake gemspec.

  20 Apr 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +files/tzinfo.gemspec, tzinfo-0.3.13:
  Install for Ruby 1.9 too, add tests for both versions, install a fake
  gemspec for both versions.

  19 Apr 2009; Tiago Cunha <tcunha@gentoo.org> tzinfo-0.3.12-r1.ebuild:
  stable sparc, bug 266520

  18 Apr 2009; Thomas Anderson <gentoofan23@gentoo.org>
  tzinfo-0.3.12-r1.ebuild:
  stable amd64, bug 266520

  18 Apr 2009; nixnut <nixnut@gentoo.org> tzinfo-0.3.12-r1.ebuild:
  ppc stable #266520

*tzinfo-0.3.13 (17 Apr 2009)

  17 Apr 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +tzinfo-0.3.13.ebuild:
  Version bump, although with an hack because one test fails when ran in
  Portage.

*tzinfo-0.3.12-r1 (12 Dec 2008)

  12 Dec 2008; Diego E. Pettenò <flameeyes@gentoo.org>
  -tzinfo-0.3.8.ebuild, +tzinfo-0.3.12-r1.ebuild:
  Remove old version, add new revision that does not use the gem but rather
  the tarball package.

*tzinfo-0.3.12 (12 Nov 2008)

  12 Nov 2008; Diego Pettenò <flameeyes@gentoo.org> +tzinfo-0.3.12.ebuild:
  Version bump.

  08 Nov 2008; nixnut <nixnut@gentoo.org> tzinfo-0.3.11.ebuild:
  Stable on ppc wrt bug 245348

  06 Nov 2008; Raúl Porcel <armin76@gentoo.org> tzinfo-0.3.11.ebuild:
  ia64/x86 stable wrt #245348

  03 Nov 2008; Thomas Anderson <gentoofan23@gentoo.org>
  tzinfo-0.3.11.ebuild:
  stable amd64, bug 245348
