@@ -1,13 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/tzinfo/Attic/tzinfo-0.3.12.ebuild,v 1.1 2008/11/12 23:10:54 flameeyes Exp $
-
-inherit gems
-
-DESCRIPTION="Library to provide daylight-savings aware transformations between timezones"
-HOMEPAGE="http://tzinfo.rubyforge.org/"
-
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="~amd64 ~ppc ~sparc ~x86 ~x86-fbsd"
-IUSE=""
