@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/tzinfo/Attic/tzinfo-0.3.13.ebuild,v 1.4 2009/05/19 21:05:02 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/tzinfo/Attic/tzinfo-0.3.13.ebuild,v 1.5 2009/06/13 10:46:26 graaff Exp $
 
 inherit ruby
 
@@ -10,7 +10,7 @@ SRC_URI="mirror://rubyforge/${PN}/${P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
 IUSE="doc test"
 
 RDEPEND=""
